src/test/ui/parser/keyword-as-as-identifier.stderr
error: expected identifier, found keyword `as`
  --> $DIR/keyword-as-as-identifier.rs:4:9
   |
LL |     let as = "foo";
   |         ^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#as = "foo";
   |         ^^^^

error: aborting due to previous error

